petdopt/kubernetes/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-storage
              mountPath: /opt/keycloak/data
      volumes:
        - name: keycloak-storage
          persistentVolumeClaim:
            claimName: keycloak-pvc
