petdopt/kubernetes/pet-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-service
  template:
    metadata:
      labels:
        app: pet-service
    spec:
      containers:
        - name: pet-service
          image: dduda261/pet-service:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
          volumeMounts:
            - mountPath: /uploads
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: pet-uploads
