petdopt/kubernetes/pet-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-service
spec:
  selector:
    app: pet-service
  ports:
    - port: 5001
      targetPort: 5000
